index, about-us done, fixed profile error

--- a/MVT/Templates/Base.html
+++ b/MVT/Templates/Base.html
@@ -13,9 +13,9 @@
 </head>
 {% block header %}
 <header id="navbar">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark flex">
-        <a class="navbar-brand" href="/">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT5LlQCrw7Yh54_ZSyfxi5tbiYgh6i9SNdgrQ&usqp=CAU"
+    <nav id="navbar-container" class="navbar navbar-expand-lg navbar-dark flex">
+        <a  class="navbar-brand" href="/">
+            <img id="nav-logo" src="{% static '/img/web_logo.png' %}"
                 width="30" height="30" class="d-inline-block align-top" alt="Logo Coder" />
             Consultorio
         </a>
@@ -26,6 +26,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav text-center">
                 <a class="nav-item nav-link" href="/">Inicio</a>
+                <a class="nav-item nav-link" href="/about-us/">about us</a>
                 {% if request.user.is_superuser %}
                 <a class="nav-item nav-link" href="/admin/">ADMIN</a>
                 <a class="nav-item nav-link" href="/create-patient/">Crear Paciente</a>
@@ -42,6 +43,7 @@
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="/list-medicines/">Listar Medicamentos</a>
                     </div>
+                    
                 </li>
                 {% if request.user.is_authenticated %}
                 <li class="nav-item">
@@ -50,19 +52,14 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/user-profile/">perfil</a>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <li class="nav-item">
+                    <a class="nav-link">
                         {{user.username}} {% if request.user.profile.profile_img.url != ""%}
-                        <img id="navbar-profile-img" src="{{request.user.profile.profile_img.url}}" width="30" height="30"
-                            class="d-inline-block align-top" alt="Logo Coder" />
+                        <img id="navbar-profile-img" src="{{request.user.profile.profile_img.url}}"/>
+                        {% else %}
+                        <img id="navbar-profile-img" src="{% static '/img/default_profile_img.png' %}" >
                         {% endif %}
                     </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="/update-profile/">actualizar perfil</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="/update-user/">actualizar usuario</a>
-                    </div>
                 </li>
                 {% else %}
                 <li class="nav-item border-success">
@@ -92,7 +89,17 @@
 {% endif %}
     {% block content %} 
     {% endblock %}
-
+    {% block footer %}
+    <footer class="footer">
+        <div id="footer-div" class="container">
+            <span id="footer-text">© 2023 - Consultorio</span>
+            <span id="footer-text">Condiciones de uso</span>
+            <span id="footer-text">Política de privacidad</span>
+            <span id="footer-text">Política de cookies</span>
+            <span id="footer-text"><a href="https://www.linkedin.com/in/juan-ignacio-reyes-314549239/">Created by Juan Ignacio Reyes</a></span>
+        </div>
+    </footer>
+    {% endblock %}
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
@@ -109,16 +116,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
         crossorigin="anonymous"></script>
-    <!-- Include Date Range Picker -->
     <script type="text/javascript"
         src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/css/bootstrap-datepicker3.css" />
-
     
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 </body>
-{% block footer %}
-<footer></footer>
-{% endblock%}
-
 </html>
