--- a/MVT/Templates/users/login.html
+++ b/MVT/Templates/users/login.html
@@ -39,6 +39,7 @@ Login
     <input class="btn btn-success w-100" type="submit" value="Iniciar Sesion">
 </form>
 </div>
-
 {% endif %}
+{% endblock %}
+{% block footer %}
 {% endblock %}
