--- a/MVT/static/css/styleMain.css
+++ b/MVT/static/css/styleMain.css
@@ -6,13 +6,37 @@
 }
 
 #navbar{
-    background-color: rgb(113 113 113);
+    color: white;
+    background-color: rgb(46, 44, 44);
     position: sticky;
     top: 0;
     z-index: 1;
+    max-height: fit-content;
 }
 #navbar-profile-img{
     border-radius: 20%;
+    width: 30px;
+    height: 30px;
+}
+#nav-logo{
+    border-radius: 50%;
+    /* mix-blend-mode: color-burn; */
+}
+.footer{
+    position: sticky;
+    bottom: 0;
+    z-index: 1;
+    background-color: #343a40;
+    width: 100%;
+}
+#footer-div{
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+}
+#footer-text{
+    z-index: 2;
+    color: white;
 }
 /* ---------------------------------------- */
 
@@ -65,4 +89,128 @@
 }
 #btn-back-profile, #update-information{
     margin: 1rem;
+}
+#profile-data{
+    display: grid;
+    grid-template-columns: auto auto;
+}
+.col1, #btn-update-profile{
+    grid-column: 1;
+}
+.col2, #btn-update-user{
+    grid-column: 2;
+}
+#profile-info{
+    text-decoration: underline;
+}
+#btn-group-update{
+    display: block;
+}
+#btn-update-profile, #btn-update-user{
+    grid-row: 2;
+    justify-self: center;
+}
+/* ---------------------------------------- */
+
+/* css for home page */
+.grid-layout{
+    display: grid;
+    grid-template-columns: auto;
+    margin: 0 auto;
+    padding: 20px;
+
+}
+#info{
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-row: 2;
+    align-items: center;
+    justify-content: space-around;
+}
+#info-picture{
+    grid-column: 1;
+    height: 400px;
+    width: 600px;
+}
+#info-img{
+    object-fit: cover;
+    width: 100%;
+    max-width: 100%;
+    height: 100%;
+    border-radius: 2rem;
+}
+#info-text{
+    grid-column: 2;
+    height: 400px;
+    width: 650px;
+    background-color: white;
+    border-radius: 2rem;
+    line-height: 2.2rem;
+}
+#info-text-ul{
+    list-style-type: '✔ ';
+}
+#info-text-li{
+    font-size: 1.2rem;
+}
+#questions{
+    grid-row: 4;
+}
+#container-questions{
+    border-radius: 2rem;
+}
+#day-sentence{
+    display: flex;
+    height: 200px;
+    grid-row: 1;
+    align-items: center;
+    justify-content: center;
+}
+#sentence{
+    height: fit-content;
+    width: 70%;
+}
+#day-sentence-text{
+    font-size: 3.5rem;
+}
+#contact{
+    display: grid;
+    grid-template-columns: auto auto;
+    height: 300px;
+    grid-row: 5;
+    align-items: center;
+    justify-content: space-evenly;
+}
+#contact-info{
+    grid-column: 1;
+    height: 70%;
+    width: 500px;
+    justify-content: center;
+    text-align: center;
+    background-color: white;
+    border-radius: 2rem;
+    line-height: 3rem;
+}
+#contact-info-ul{
+    list-style-type: '⇉';
+}
+#contact-info-li{
+    font-size: 1.2rem;
+}
+#google-maps{
+    grid-column: 2;
+    height: 300px;
+    width: 500px;
+    border-radius: 2rem;
+}
+/* ---------------------------------------- */
+
+/* css for about us page */
+#about-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+#about-card{
+    max-width: 700px;
 }
