--- a/MVT/Templates/about_us.html
+++ b/MVT/Templates/about_us.html
@@ -5,48 +5,46 @@ About Us
 {% endblock %}
 {% block content %}
 <div id="about-container">
-    <h1>About Us</h1>
+    <h1 id="h1-about">About Us</h1>
 <div id="about-card" class="card">
     <div class="row g-0">
-        <div class="col-md-4">
-            <img src="..." class="img-fluid rounded-start" alt="...">
+        <div id="about-img-container" class="col-md-4">
+            <img id="about-img" src="{% static '/img/img_avatar.png' %}" class="img-fluid rounded-start" alt="...">
         </div>
-        <div class="col-md-8">
+        <div id="about-info" class="col-md-8">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                    content. This content is a little bit longer.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                <h5 class="card-title">Juan Ignacio Reyes Vega Weiss</h5>
+                <p class="card-text">estudiante: CoderHouse Python comisión 34650.
+                </p>
+                <p class="card-text"><small class="text-muted">CoderHouse</small></p>
             </div>
         </div>
     </div>
 </div>
 <div id="about-card" class="card">
     <div class="row g-0">
-        <div class="col-md-4">
-            <img src="..." class="img-fluid rounded-start" alt="...">
+        <div id="about-img-container" class="col-md-4">
+            <img id="about-img" src="https://avatars.githubusercontent.com/u/87657275?v=4" class="img-fluid rounded-start" alt="...">
         </div>
-        <div class="col-md-8">
+        <div id="about-info" class="col-md-8">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                    content. This content is a little bit longer.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                <h5 class="card-title">Luca Cittá Giordano</h5>
+                <p class="card-text">Profesor: CoderHouse Python comisión 34650.</p>
+                <p class="card-text"><small class="text-muted">CoderHouse</small></p>
             </div>
         </div>
     </div>
 </div>
 <div id="about-card" class="card">
     <div class="row g-0">
-        <div class="col-md-4">
-            <img src="..." class="img-fluid rounded-start" alt="...">
+        <div id="about-img-container" class="col-md-4">
+            <img id="about-img" src="https://avatars.githubusercontent.com/u/70983593?v=4" class="img-fluid rounded-start" alt="...">
         </div>
-        <div class="col-md-8">
+        <div id="about-info" class="col-md-8">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                    content. This content is a little bit longer.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                <h5 class="card-title">Emanuel Tevez</h5>
+                <p class="card-text">Tutor: CoderHouse Python comisión 34650.</p>
+                <p class="card-text"><small class="text-muted">CoderHouse</small></p>
             </div>
         </div>
     </div>
