--- a/MVT/static/css/styleMain.css
+++ b/MVT/static/css/styleMain.css
@@ -206,11 +206,30 @@
 /* ---------------------------------------- */
 
 /* css for about us page */
+#h1-about{
+    color: white;
+    font-size: 100px;
+}
 #about-container{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 #about-card{
-    max-width: 700px;
+    width: 800px;
+    margin-top: 3rem;
+    border-bottom-right-radius: 6rem;
+    border-top-right-radius: 6rem;
+    
+}
+#about-img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-bottom-right-radius: 6rem;
+    border-top-right-radius: 6rem;
+}
+#about-info{
+    max-width: 600px;
 }
